# ti

./: .biomeignore  .codespellrc  .env.example  .gitignore  .osv-scanner.toml  AGENTS.md  LICENSE  README.md  deploy_ti_stack.sh  docker-compose.yml  example-config.toml  justfile
.github/: dependabot.yml
.github/workflows/: osv-scanner.yml  super-linter.yml
docs/: ARCHITECTURE.md  BRIEFING_SERVICE.md  CODEX_TASKS.md  CONNECTORS.md  DEPLOYMENT.md  MINIFLUX.md  WATCHLIST.md  WORKFLOW.md  ZOTERO.md  awesome-annual-security-reports.md
scripts/: bootstrap_env.py  common.sh  fix_volume_permissions.sh  read-toml.py
services/briefing/: Dockerfile  pyproject.toml
services/briefing/src/briefing_service/: briefing.py  main.py  miniflux_admin.py  opencti_client.py  readwise_admin.py  rss.py  storage.py  watchlist.py  zotero_admin.py
services/briefing/src/briefing_service/templates/: briefings_archive.html  daily.xsl  denylist.html  index.html  latest.html  miniflux_feeds.html  readwise_tags.html  zotero_collections.html  zotero_tags.html
services/connectors/awesome_annual_security_reports/: Dockerfile  pyproject.toml
services/connectors/awesome_annual_security_reports/src/connector_awesome_annual_security_reports/: main.py
services/connectors/common/: pyproject.toml
services/connectors/common/src/connectors_common/: __init__.py  connector_state.py  dedup.py  denylist.py  enrichment.py  extractors.py  fingerprint.py  identity.py  llm.py  mapping_store.py  opencti_client.py  state_store.py  text_utils.py  url_utils.py  work.py
services/connectors/common/tests/: test_fingerprint.py  test_identity.py  test_mapping_store.py  test_url_utils.py
services/connectors/cvelist/: Dockerfile  pyproject.toml
services/connectors/cvelist/src/connector_cvelist/: main.py
services/connectors/enrich_text/: Dockerfile  pyproject.toml
services/connectors/enrich_text/src/connector_enrich_text/: main.py
services/connectors/miniflux/: Dockerfile  pyproject.toml
services/connectors/miniflux/src/connector_miniflux/: main.py
services/connectors/readwise/: Dockerfile  pyproject.toml
services/connectors/readwise/src/connector_readwise/: main.py
services/connectors/zotero/: Dockerfile  pyproject.toml
services/connectors/zotero/src/connector_zotero/: main.py
services/opencti-init/: Dockerfile  opencti_init.py
services/rabbitmq/: rabbitmq.conf
