[project]
name = "connectors-common"
version = "0.1.0"
description = "Common utilities for OpenCTI connectors"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "trafilatura>=1.8.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/connectors_common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
