[project]
name = "connector-enrich-text"
version = "0.1.0"
description = "Text enrichment connector"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "pycti>=6.9.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/connector_enrich_text"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
